chore: update favicon

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Crypto Community</title>
     <link
       rel="shortcut icon"
-      href="https://ugc.production.linktr.ee/9250b48c-ee52-4bdb-af03-b157be4e8c33_image.jpeg?io=true&size=avatar-v3_0"
+      href="https://nekowawolf.github.io/delete-later/assets/img/icon_w.png"
     />
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://kit.fontawesome.com/2ff8362c80.js" crossorigin="anonymous"></script>
